# robotics_labs

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/: lint_and_tests.yml  linux_in_conda.yml  macos_test.yml  win_tests.yml
.github/workflows/: deps_from_conda.yml  lint_and_tests.yml  linux_in_conda.yml  macos_test.yml  static_code_analysis_and_tests.yml  trigger_rtd.yml  win_tests.yml
docs/: api.rst  conf.py  index.rst  install.md  lab01.md  lab02.md  lab03.md  lab04.md  lab06.md  lab11.md
docs/conda_win_installation/: README.md
docs/installation/: install.rst
docs/installation/conda_win_installation/: conda_windows.rst
docs/labs/: laboratories.rst
docs/labs/lab01/: lab01.rst
docs/labs/lab02/: lab02.rst
docs/labs/lab03/: lab03.rst
docs/labs/lab04/: lab04.rst
docs/labs/lab05/: lab05.rst
docs/labs/lab06/: lab06.rst
docs/labs/lab07/: lab07.rst
exercises/lab01/: 03_drone_se3_example.py  so2_example.py
exercises/lab01_transformation/: 01_so2_example.py  02_mobile_robot_se2_example.py
exercises/lab02/: 01_animate_robot.py  02_animate_robot_with_all_frames.py  05_animate_own_urdf_with_frames.py  robot.urdf
exercises/lab02_forward_kinematics/: 03_animate_urdf.py  04_animate_own_urdf.py  05_animate_own_urdf_with_frames.py  robot_hw.urdf
exercises/lab03/: 01_detect_aruco.py  01_null_space_motion_planar.py  02_aruco_se3.py  02_null_space_motion_spatial.py  03_homography.py  99_generate_aruco_markers.py
exercises/lab04/: 01_null_space_motion_planar.py  01_numerical_ik.py  02_analytical_ik.py
exercises/lab05/: 01_homography.py  02_analytical_ik.py  02_hand_eye.py  02_plan_planar.py  03_hand_to_eye.py  03_plan_spatial.py  04_generate_aruco_markers.py  05_detect_aruco.py
exercises/lab05_perception/: 01_detect_aruco.py  01_homography.py  02_homography.py  03_calibration.py  03_homography.py  04_aruco_se3.py  98_hand_to_eye.py  perception_utils.py
exercises/lab06/: 01_plan_mobile_robot.py  02_forward_dynamics_constrained.py  02_plan_planar.py
exercises/lab06_planning/: 03_plan_spatial.py
exercises/lab07_dynamics/: 01_forward_dynamics.py
exercises/lab11/: 01_forward_dynamics.py  02_forward_dynamics_constrained.py
robotics_toolbox/core/: __init__.py  se2.py  se3.py  so2.py  so3.py
robotics_toolbox/planning/: prm.py
robotics_toolbox/render/: __init__.py  mobile_robot_renderer.py  planar_manipulator_renderer.py  planar_renderer.py  renderer_planar.py  renderer_spatial.py  se2_renderer.py
robotics_toolbox/robots/: drone.py  mobile_robot.py  planar_manipulator.py  planar_manipulator_dynamics.py  spatial_manipulator.py
robotics_toolbox/utils/: __init__.py  animation_utils.py  configuration_utils.py  geometry_utils.py
src/robotics_toolbox/: __init__.py
src/robotics_toolbox/core/: __init__.py  se2.py  se3.py  so2.py  so3.py
src/robotics_toolbox/planning/: prm.py  rrt.py
src/robotics_toolbox/render/: __init__.py  mobile_robot_renderer.py  planar_manipulator_renderer.py  renderer_planar.py  renderer_spatial.py
src/robotics_toolbox/robots/: __init__.py  mobile_robot.py  planar_manipulator.py  planar_manipulator_dynamics.py  robot_base.py
src/robotics_toolbox/utils/: __init__.py  perception.py
tests/: test_configuration_utils.py  test_geometry_utils.py  utils.py
tests/hw01/mandatory/: test_immutability_of_operators.py  test_se2.py  test_se3.py  test_so2.py  test_so3.py  test_transformations.py
tests/hw01/optional/: test_so3_opt.py
tests/hw02/mandatory/: pin_mod_pin_data.pickle  pin_mod_student_data.pickle  test_fk_planar.py  test_spatial_urdf.py
tests/hw03/mandatory/: jacobian.py  test_homography.py  test_jacobian.py
(+9 files in other folders)
